# genai-bench

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  TOGETHER_AI_INTEGRATION.md  USER_GUIDE.md  clippy.toml  index.html  mkdocs.yml  mypy.ini  pyproject.toml  rustfmt.toml  sitemap.xml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/workflows/: ci-rust.yml  ci.yml  docs.yml  labeler.yml  release.yml
api/: index.html
auth/: Cargo.toml
auth/src/: lib.rs
core/: Cargo.toml
core/src/: channel.rs  config.rs  error.rs  lib.rs  metrics.rs  request.rs  response.rs  traits.rs
core/src/orchestrator/: aggregator.rs  builder.rs  executor.rs  mod.rs  tests.rs
core/src/worker/: builder.rs  executor.rs  mod.rs  rate_limiter.rs  stats.rs  tests.rs
development/: index.html
development/contributing/: index.html
docs/: README.md  index.md  issue-155-oci-429.md  sglang_profiling.md
docs/.config/: mkdocs-gh-pages.yml  mkdocs.yml
docs/api/: index.md  overview.md
docs/developer-guide/: index.md
docs/development/: adding-new-features.md  api-reference.md  architecture.md  contributing.md  developer-guide.md  index.md
docs/examples/:  plot-config-examples.md  basic-benchmarks.md  index.md
docs/getting-started/: cli-guidelines.md  command-guidelines.md  configuration.md  entrypoints.md  index.md  installation.md  metrics-definition.md  migrating-from-sglang-vllm.md  quick-start.md  task-definition.md
docs/user-guide/: analysis.md  baseten-support.md  cli.md  generate-excel-sheet.md  generate-plot.md  index.md  metrics.md  multi-cloud-auth-storage.md  multi-cloud-quick-reference.md  overview.md  performance-troubleshooting.md  run-benchmark-using-docker.md  run-benchmark.md  scenario-definition.md  tasks.md  upload-benchmark-result.md
examples/: README_CUSTOM_BACKENDS.md  custom_sagemaker_backend.py  experiment_excel.py  experiment_plots.py  index.html  minimal_custom_backend.py
examples/dataset_configs/: config_llava-bench-in-the-wild.json  huggingface_advanced.json  huggingface_simple.json  local_csv.json
examples/plot-config-examples/: index.html
examples/plot_configs/: README.md  comprehensive_multi_line.json  custom_2x2.json  multi_line_latency.json  performance_focused.json
genai_bench/: __init__.py  logging.py  protocol.py  rate_limiter.py  time_units.py  utils.py  version.py
genai_bench/analysis/: __init__.py  excel_report.py  experiment_loader.py  flexible_plot_report.py  plot_config.py  plot_report.py
genai_bench/async_runner/: __init__.py  base.py  closed_loop.py  factory.py  open_loop.py  runner.py
genai_bench/auth/: auth_provider.py  factory.py  model_auth_provider.py  storage_auth_provider.py  unified_factory.py
genai_bench/cli/: __init__.py  cli.py  option_groups.py  report.py  utils.py  validation.py
genai_bench/data/: __init__.py  config.py  image_prompts.txt  sources.py
genai_bench/distributed/: runner.py
genai_bench/metrics/: __init__.py  aggregated_metrics_collector.py  metrics.py  request_metrics_collector.py
genai_bench/oci_object_storage/: datastore.py  object_uri.py  os_datastore.py
genai_bench/openloop/: runner.py
genai_bench/sampling/: __init__.py  audio.py  base.py  base_sampler.py  dataset_loader.py  image.py  image_dataset_loader.py  image_sampler.py  multi_modality_scenario.py  text.py  text_dataset_loader.py  text_sampler.py  text_scenario.py  video.py
genai_bench/scenarios/: __init__.py  base.py  multimodal.py  text.py
genai_bench/storage/: __init__.py  aws_storage.py  azure_storage.py  base.py  factory.py  gcp_storage.py  github_storage.py  oci_storage.py
genai_bench/ui/: dashboard.py  layout.py  plots.py
genai_bench/user/: __init__.py  aws_bedrock_user.py  aws_sagemaker_user.py  azure_openai_user.py  base_user.py  baseten_user.py  cohere_user.py  custom_user.py  fast_http_user.py  fast_openai_user.py  gcp_vertex_user.py  oci_cohere_user.py  oci_cohere_v2_user.py  oci_genai_user.py  oci_openai_user.py  openai_user.py  sglang_user.py  together_user.py
getting-started/: index.html
parallel_feature_branch/: D100_100_text-to-text_zai-org_GLM-4.6_num_concurrency_1_time_300s.json  experiment_metadata.json  parallel_feature_branch_summary.xlsx
regression_feature_no_flag/: D100_100_text-to-text_zai-org_GLM-4.6_num_concurrency_1_time_120s.json  experiment_metadata.json  regression_feature_no_flag_summary.xlsx
regression_feature_with_flag/: D100_100_text-to-text_zai-org_GLM-4.6_num_concurrency_1_time_120s.json  experiment_metadata.json  regression_feature_with_flag_summary.xlsx
regression_main_50req/: experiment_metadata.json
regression_main_branch/: D100_100_text-to-text_num_concurrency_1_time_120s.json  experiment_metadata.json  regression_main_branch_summary.xlsx
report/: Cargo.toml
report/src/: lib.rs
rust/genai-bench-rs/: ARCHITECTURE.md  Cargo.toml  README.md  USAGE.md
rust/genai-bench-rs/src/: lib.rs  main.rs
rust/genai-bench-rs/src/cli/: mod.rs
rust/genai-bench-rs/src/metrics/: mod.rs
rust/genai-bench-rs/src/output/: csv_export.rs  excel.rs  json_export.rs  mod.rs
rust/genai-bench-rs/src/providers/: mod.rs  openai.rs
rust/genai-bench-rs/src/runner/: mod.rs
rust/genai-bench-rs/src/sampling/: mod.rs
rust/genai-bench-rs/src/scenarios/: mod.rs
rust/genai-bench-rs/src/ui/: charts.rs  dashboard.rs  events.rs  mod.rs
rust/genai-bench-rs/src/visualization/: histogram.rs  mod.rs  percentiles.rs  throughput.rs
samplers/: Cargo.toml
samplers/src/: lib.rs
search/: search_index.json
site/: 404.html  index.html  search.html  sitemap.xml
src/: main.rs
src/cli/: mod.rs
storage/: Cargo.toml
storage/src/: lib.rs
tests/: __init__.py  conftest.py  test_logging_warning_once.py  test_rate_limiter.py  test_ssl_utils.py  test_time_units.py
ui/: Cargo.toml
ui/src/: lib.rs
user-guide/: index.html
vendors/: Cargo.toml
vendors/src/: lib.rs  streaming.rs  traits.rs
(+224 files in other folders)
