[package]
name = "genai-bench-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, metrics, and orchestration for genai-bench"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
hdrhistogram.workspace = true
governor.workspace = true
reqwest.workspace = true

[dev-dependencies]
tokio-test.workspace = true
