[package]
name = "genai-bench-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage providers for genai-bench results"

[dependencies]
genai-bench-auth.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

# Optional cloud SDKs
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
azure_storage_blobs = { workspace = true, optional = true }
google-cloud-storage = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true

[features]
default = []
aws = ["dep:aws-sdk-s3", "dep:aws-config"]
azure = ["dep:azure_storage_blobs"]
gcp = ["dep:google-cloud-storage"]
oci = []
