[package]
name = "genai-bench-vendors"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vendor client implementations for genai-bench"

[dependencies]
genai-bench-core.workspace = true
genai-bench-auth.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
humantime-serde = "1.1"

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Optional cloud SDKs
aws-sdk-bedrockruntime = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true

[features]
default = []
aws = ["dep:aws-sdk-bedrockruntime", "dep:aws-config"]
azure = []
gcp = []
oci = []
